Generate dynamic files at install time
git-svn-id: svn+ssh://scm.fusionforge.org/srv/svn/fusionforge/trunk@10047 9d84d37e-dcb1-4aad-b103-6f3d92f53bf6

--- a/gforge/debian/rules
+++ b/gforge/debian/rules
@@ -159,7 +159,12 @@ install: build
 
 # Rename config files
 	mv $(CURDIR)/debian/$(OLDPACKAGE)-common/etc/fusionforge/config.ini-fhs $(CURDIR)/debian/$(OLDPACKAGE)-common/etc/fusionforge/config.ini
-	mv $(CURDIR)/debian/$(OLDPACKAGE)-web-apache2/etc/gforge/httpd.conf.d-fhs $(CURDIR)/debian/$(OLDPACKAGE)-web-apache2/etc/gforge/httpd.conf.d
+	cp -r $(CURDIR)/debian/$(OLDPACKAGE)-web-apache2/usr/share/gforge/etc/httpd.conf.d-fhs $(CURDIR)/debian/$(OLDPACKAGE)-web-apache2/etc/gforge/httpd.conf.d
+# Remove those that need to be generated at install time
+	rm $(CURDIR)/debian/$(OLDPACKAGE)-web-apache2/etc/gforge/httpd.conf.d/secrets.inc
+	rm $(CURDIR)/debian/$(OLDPACKAGE)-web-apache2/etc/gforge/httpd.conf.d/vhost-list.inc
+	rm $(CURDIR)/debian/$(OLDPACKAGE)-web-apache2/etc/gforge/httpd.conf.d/vhost-main.inc
+	rm $(CURDIR)/debian/$(OLDPACKAGE)-web-apache2/etc/gforge/httpd.conf.d/vhost-projects.inc
 
 # Remove Windows files
 	rm -rf $(CURDIR)/debian/$(OLDPACKAGE)-web-apache2/usr/share/*/www/scm/viewvc/windows
