--- a/gforge/etc/httpd.conf.d-opt/02-config-main.conf
+++ b/gforge/etc/httpd.conf.d-opt/02-config-main.conf
@@ -11,7 +11,7 @@
   # PHP settings
   #
   
-  php_admin_value include_path "/opt/fusionforge/etc/custom:/opt/fusionforge/etc:/opt/fusionforge:/opt/fusionforge/www/include:."
+  php_admin_value include_path "/opt/fusionforge/etc/custom:/opt/fusionforge/etc:/opt/fusionforge:/opt/fusionforge/www/include:/usr/share/php:."
   php_admin_value default_charset "UTF-8"
   php_flag register_globals "off"
   php_flag magic_quotes_gpc "off"
