--- a/gforge/debian/rules
+++ b/gforge/debian/rules
@@ -160,6 +160,8 @@ install: build
 # Rename config files
 	mv $(CURDIR)/debian/$(OLDPACKAGE)-common/etc/fusionforge/config.ini-fhs $(CURDIR)/debian/$(OLDPACKAGE)-common/etc/fusionforge/config.ini
 	cp -r $(CURDIR)/debian/$(OLDPACKAGE)-web-apache2/usr/share/gforge/etc/httpd.conf.d-fhs $(CURDIR)/debian/$(OLDPACKAGE)-web-apache2/etc/gforge/httpd.conf.d
+	cp $(CURDIR)/debian/$(OLDPACKAGE)-web-apache2/usr/share/gforge/etc/httpd.conf-fhs $(CURDIR)/debian/$(OLDPACKAGE)-web-apache2/etc/gforge/httpd.conf
+
 # Remove those that need to be generated at install time
 	rm $(CURDIR)/debian/$(OLDPACKAGE)-web-apache2/etc/gforge/httpd.conf.d/secrets.inc
 	rm $(CURDIR)/debian/$(OLDPACKAGE)-web-apache2/etc/gforge/httpd.conf.d/vhost-list.inc
