Oops.  Manual install has config in /etc/gforge and not under /opt.
git-svn-id: svn+ssh://scm.fusionforge.org/srv/svn/fusionforge/trunk@10056 9d84d37e-dcb1-4aad-b103-6f3d92f53bf6

--- a/gforge/etc/httpd.conf.d-opt/02-config-main.conf
+++ b/gforge/etc/httpd.conf.d-opt/02-config-main.conf
@@ -5,13 +5,13 @@
   Options Indexes FollowSymlinks
   AllowOverride All
   
-  Include /opt/fusionforge/etc/httpd.conf.d/auth-main.inc
+  Include /etc/gforge/httpd.conf.d/auth-main.inc
   
   #
   # PHP settings
   #
   
-  php_admin_value include_path "/opt/fusionforge/etc/custom:/opt/fusionforge/etc:/opt/fusionforge:/opt/fusionforge/www/include:/usr/share/php:."
+  php_admin_value include_path "/etc/gforge/custom:/etc/gforge:/opt/fusionforge:/opt/fusionforge/www/include:/usr/share/php:."
   php_admin_value default_charset "UTF-8"
   php_flag register_globals "off"
   php_flag magic_quotes_gpc "off"
