--- a/gforge/etc/httpd.conf.d-opt/20-vhosts-lists.conf
+++ b/gforge/etc/httpd.conf.d-opt/20-vhosts-lists.conf
@@ -2,7 +2,7 @@
 # List host
 #
 <VirtualHost *:80>
-  Include /opt/fusionforge/etc/httpd.conf.d/vhost-list.inc
+  Include /etc/gforge/httpd.conf.d/vhost-list.inc
 
   AddHandler cgi-script .cgi
   
@@ -24,12 +24,12 @@
   RewriteEngine on  
   RewriteRule ^/$ http://%{HTTP_HOST}/cgi-bin/mailman/listinfo [R=301]
   
-  Include /opt/fusionforge/etc/httpd.conf.d/block-trace.inc
-  Include /opt/fusionforge/etc/httpd.conf.d/log.inc
-  Include /opt/fusionforge/etc/httpd.conf.d/ssl-off.inc
+  Include /etc/gforge/httpd.conf.d/block-trace.inc
+  Include /etc/gforge/httpd.conf.d/log.inc
+  Include /etc/gforge/httpd.conf.d/ssl-off.inc
 </VirtualHost>
 <VirtualHost *:443>
-  Include /opt/fusionforge/etc/httpd.conf.d/vhost-list.inc
+  Include /etc/gforge/httpd.conf.d/vhost-list.inc
 
   AddHandler cgi-script .cgi
   
@@ -51,7 +51,7 @@
   RewriteEngine on  
   RewriteRule ^/$ https://%{HTTP_HOST}/cgi-bin/mailman/listinfo [R=301]
   
-  Include /opt/fusionforge/etc/httpd.conf.d/block-trace.inc
-  Include /opt/fusionforge/etc/httpd.conf.d/log.inc
-  Include /opt/fusionforge/etc/httpd.conf.d/ssl-on.inc
+  Include /etc/gforge/httpd.conf.d/block-trace.inc
+  Include /etc/gforge/httpd.conf.d/log.inc
+  Include /etc/gforge/httpd.conf.d/ssl-on.inc
 </VirtualHost>
