--- a/gforge/etc/httpd.conf.d-opt/30-vhosts-projects.conf
+++ b/gforge/etc/httpd.conf.d-opt/30-vhosts-projects.conf
@@ -3,14 +3,14 @@
 #
 # This is used when FusionForge has DNS delegation
 <VirtualHost *:80>
-  Include /opt/fusionforge/etc/httpd.conf.d/vhost-projects.inc
-  Include /opt/fusionforge/etc/httpd.conf.d/block-trace.inc
-  Include /opt/fusionforge/etc/httpd.conf.d/log.inc
-  Include /opt/fusionforge/etc/httpd.conf.d/ssl-off.inc
+  Include /etc/gforge/httpd.conf.d/vhost-projects.inc
+  Include /etc/gforge/httpd.conf.d/block-trace.inc
+  Include /etc/gforge/httpd.conf.d/log.inc
+  Include /etc/gforge/httpd.conf.d/ssl-off.inc
 </VirtualHost>
 <VirtualHost *:443>
-  Include /opt/fusionforge/etc/httpd.conf.d/vhost-projects.inc
-  Include /opt/fusionforge/etc/httpd.conf.d/block-trace.inc
-  Include /opt/fusionforge/etc/httpd.conf.d/log.inc
-  Include /opt/fusionforge/etc/httpd.conf.d/ssl-on.inc
+  Include /etc/gforge/httpd.conf.d/vhost-projects.inc
+  Include /etc/gforge/httpd.conf.d/block-trace.inc
+  Include /etc/gforge/httpd.conf.d/log.inc
+  Include /etc/gforge/httpd.conf.d/ssl-on.inc
 </VirtualHost>
