More tweaks to the -opt installation scheme
git-svn-id: svn+ssh://scm.fusionforge.org/srv/svn/fusionforge/trunk@10067 9d84d37e-dcb1-4aad-b103-6f3d92f53bf6

--- a/src/etc/httpd.conf.d-opt/02-config-main.conf
+++ b/src/etc/httpd.conf.d-opt/02-config-main.conf
@@ -1,7 +1,7 @@
 #
 # Main directory options
 #
-<Directory /opt/fusionforge/www>
+<Directory /opt/gforge/www>
   Options Indexes FollowSymlinks
   AllowOverride All
   
@@ -11,7 +11,7 @@
   # PHP settings
   #
   
-  php_admin_value include_path "/etc/gforge/custom:/etc/gforge:/opt/fusionforge:/opt/fusionforge/www/include:/usr/share/php:."
+  php_admin_value include_path "/etc/gforge/custom:/etc/gforge:/opt/gforge:/opt/gforge/www/include:/usr/share/php:."
   php_admin_value default_charset "UTF-8"
   php_flag register_globals "off"
   php_flag magic_quotes_gpc "off"
