Trying to fix deb package autobuilding after the gforge->src renaming
git-svn-id: svn+ssh://scm.fusionforge.org/srv/svn/fusionforge/trunk@10087 9d84d37e-dcb1-4aad-b103-6f3d92f53bf6

--- a/Makefile.debian
+++ b/Makefile.debian
@@ -13,7 +13,7 @@
 #
 
 FUSIONFORGE=FusionForge
-PKGDIR=gforge
+PKGDIR=src
 PKGNAME=$(shell head -1 $(PKGDIR)/debian/changelog | sed 's/ .*//')
 PKGLETTER=$(shell echo $(PKGNAME) | cut -c1)
 ORIGIN=debian.fusionforge.org
