--- a/gforge/debian/control
+++ b/gforge/debian/control
@@ -259,7 +259,7 @@ Description: collaborative development tool - CVS plugin
 
 Package: gforge-plugin-scmsvn
 Architecture: all
-Depends: gforge-common, gforge-db-postgresql | gforge-db, gforge-web-apache2 | gforge-web, gforge-shell-postgresql | gforge-shell, subversion, subversion-tools, viewvc | viewcvs, python-subversion, python (>= 2.3), php5-cli, openbsd-inetd | inet-superserver, update-inetd, ${misc:Depends}
+Depends: gforge-common, gforge-db-postgresql | gforge-db, gforge-web-apache2 | gforge-web, gforge-shell-postgresql | gforge-shell, subversion, subversion-tools, python-subversion, python (>= 2.3), php5-cli, openbsd-inetd | inet-superserver, update-inetd, ${misc:Depends}
 Provides: gforge-plugin-scm
 Description: collaborative development tool - Subversion plugin
  FusionForge provides many tools to aid collaboration in a
