Ignore *.deb files for bzr
git-svn-id: svn+ssh://scm.fusionforge.org/srv/svn/fusionforge/trunk@10166 9d84d37e-dcb1-4aad-b103-6f3d92f53bf6

--- a/.bzrignore
+++ b/.bzrignore
@@ -5,3 +5,6 @@ fusionforge_*.diff.gz
 fusionforge_*.build
 fusionforge_*_source.changes
 tarballs
+gforge_*_all.deb
+gforge-*_*_all.deb
+fusionforge-*_*_all.deb
