Fix ubuntu crossbuild
git-svn-id: svn+ssh://scm.fusionforge.org/srv/svn/fusionforge/trunk@10176 9d84d37e-dcb1-4aad-b103-6f3d92f53bf6

--- a/Makefile.debian
+++ b/Makefile.debian
@@ -63,7 +63,8 @@ UBUNTULIST=1hardy 1intrepid 1jaunty 1karmic
 UBUNTULIST=1jaunty 1karmic 1lucid
 UBUNTULISTP=1gutsy
 UBULIST=$(UBUNTULIST) $(UBUNTULISTP)
-UBUNTUOP=--mirror $(UBUMIRROR) --debootstrap debootstrap
+# I had to add keyring: see https://bugs.launchpad.net/ubuntu/+source/pbuilder/+bug/599695, requires to install ubuntu-keyring package
+UBUNTUOP=--mirror $(UBUMIRROR) --debootstrapopts --keyring=/usr/share/keyrings/ubuntu-archive-keyring.gpg --debootstrap debootstrap
 DEBIANOP=--mirror $(DEBMIRROR) --debootstrapopts --include=apt --debootstrap debootstrap
 ASKPASS=--ask-passphrase
 ASKPASS=
