--- a/src/etc/httpd.conf.d-fhs/20-vhosts-lists.conf
+++ b/src/etc/httpd.conf.d-fhs/20-vhosts-lists.conf
@@ -3,23 +3,7 @@
 #
 <VirtualHost *:80>
   Include /etc/gforge/httpd.conf.d/vhost-list.inc
-
-  AddHandler cgi-script .cgi
-  
-  ScriptAlias /cgi-bin/mailman/ /var/lib/mailman/cgi-bin/
-  ScriptAlias /mailman/ /var/lib/mailman/cgi-bin/
-  
-  Alias /pipermail /var/lib/mailman/archives/public
-  <Directory /var/lib/mailman/archives/public>
-    AllowOverride Options
-    Options FollowSymLinks
-  </Directory>
-  
-  Alias /images/mailman /usr/share/images/mailman
-  <Location /images/mailman>
-    order allow,deny
-    allow from all
-  </Location>
+  Include /etc/gforge/httpd.conf.d/plugin-mailman.inc
 
   RewriteEngine on  
   RewriteRule ^/$ http://%{HTTP_HOST}/cgi-bin/mailman/listinfo [R=301]
@@ -30,24 +14,8 @@
 </VirtualHost>
 <VirtualHost *:443>
   Include /etc/gforge/httpd.conf.d/vhost-list.inc
+  Include /etc/gforge/httpd.conf.d/plugin-mailman.inc
 
-  AddHandler cgi-script .cgi
-  
-  ScriptAlias /cgi-bin/mailman/ /var/lib/mailman/cgi-bin/
-  ScriptAlias /mailman/ /var/lib/mailman/cgi-bin/
-  
-  Alias /pipermail /var/lib/mailman/archives/public
-  <Directory /var/lib/mailman/archives/public>
-    AllowOverride Options
-    Options FollowSymLinks
-  </Directory>
-  
-  Alias /images/mailman /usr/share/images/mailman
-  <Location /images/mailman>
-    order allow,deny
-    allow from all
-  </Location>
-  
   RewriteEngine on  
   RewriteRule ^/$ https://%{HTTP_HOST}/cgi-bin/mailman/listinfo [R=301]
   
