--- a/src/debian/rules
+++ b/src/debian/rules
@@ -29,7 +29,8 @@ PLINKSFILES=$(patsubst %,debian/$(OLDPACKAGE)-%.links,$(shell ls  plugins/*/pack
 INSTALLFILES=$(patsubst packaging/install/%,debian/$(OLDPACKAGE)-%.install,$(wildcard packaging/install/[a-z]*))
 PINSTALLFILES=$(patsubst %,debian/$(OLDPACKAGE)-%.install,$(shell ls  plugins/*/packaging/install/[a-z]* | sed 's:.*/\(.[^/]*\):\1:'))
 
-DOCSFILES=$(patsubst packaging/docs/oldpkgname%,debian/$(OLDPACKAGE)%.docs,$(wildcard packaging/docs/oldpkgname*)) $(patsubst packaging/docs/pkgname%,debian/$(PACKAGE)%.docs,$(wildcard packaging/docs/pkgname*))
+DOCSFILES=$(patsubst packaging/docs/%,debian/$(OLDPACKAGE)%.docs,$(wildcard packaging/docs/[a-z]*)) \
+		$(patsubst packaging/docs/%,debian/$(PACKAGE)%.docs,$(wildcard packaging/docs/[a-z]*)
 PDOCSFILES=$(patsubst %,debian/$(OLDPACKAGE)-%.docs,$(shell ls  plugins/*/packaging/docs/[a-z]* | sed 's:.*/\(.[^/]*\):\1:'))
 
 POFILES=$(patsubst debian/dsf-po/%,debian/po/%,$(wildcard debian/dsf-po/*) debian/po/POTFILES.in)
@@ -81,9 +82,9 @@ debian/$(OLDPACKAGE)-plugin-%.docs:
 	$(SED_REPLACE) $(CURDIR)/plugins/$*/packaging/docs/plugin-$* > $@
 
 debian/$(OLDPACKAGE)-%.docs:
-	$(SED_REPLACE) $(CURDIR)/packaging/docs/oldpkgname-$* > $@
+	$(SED_REPLACE) $(CURDIR)/packaging/docs/$* > $@
 debian/$(PACKAGE)-%.docs:
-	$(SED_REPLACE) $(CURDIR)/packaging/docs/pkgname-$* > $@
+	$(SED_REPLACE) $(CURDIR)/packaging/docs/$* > $@
 
 debian/control: $(wildcard packaging/control/*) $(wildcard plugins/*/packaging/control/[0-9][0-9][0-9]*) 
 	ls $(CURDIR)/packaging/control/[0-9][0-9][0-9]* $(CURDIR)/plugins/*/packaging/control/[0-9][0-9][0-9]* | grep -v shortdesc | grep -v scmcpold | while read file ; do cat $${file}; if [ -f $${file}.shortdesc ] ; then cat $(CURDIR)/packaging/control/AAAdesc; echo ' .'; cat $${file}.shortdesc; fi; echo '';  done | $(SED_REPLACE) > $@
