Add target to build control file
git-svn-id: svn+ssh://scm.fusionforge.org/srv/svn/fusionforge/trunk@10206 9d84d37e-dcb1-4aad-b103-6f3d92f53bf6

--- a/Makefile.debian
+++ b/Makefile.debian
@@ -422,3 +422,6 @@ cleancache: # Clean $(APTCACHE) (apt cache) #
 
 cleanorig: # Clean $(TARBALLS)/$(ORIGFILE) #
 	rm -f $(TARBALLS)/$(ORIGFILE)
+
+control:
+	cd src/packaging/control; $(MAKE)
