Add new gforge.conf directive sys_ssl_apache_extra_cmd.
Rationale: some X.509v3 SSL certificates are signed by one or more
intermediate CAs before the Root CA, thus forming a chain of cer-
tification authorities. Since SSL clients usually only keep a store
of Root CAs, the intermediates must be delivered to them by the SSL
server (here, the Apache webserver). The new command defaults to
empty, but here’s a usage example:

sys_sslcrt=/etc/ssl/myforge.cer
sys_sslcrt=/etc/ssl/private/myforge.key
sys_ssl_apache_extra_cmd=SSLCertificateChainFile /etc/ssl/class3.crt

In this example, myforge.key is the RSA secret key, myforge.cer the
public key signed by the CAcert.org Class 3 certificate, thus being
the SSL server certificate. The Class 3 certificate is signed by their
Class 1 certificate (Root CA Certificate), which is what we expect the
browser to carry (well, maybe not for CAcert.org but e.g. StartCom,
GoDaddy, Comodo, Verisign/Thawte, …). Thus, in order to validate the
myforge.cer the browser needs to first check if the signature of
class1.crt (which it has) on class3.crt (which we send out) is valid,
then whether the signature of class3.crt (which we send out, but has
been validated to trust earlier) on myforge.cer (which we send out and
use for communication) is valid.

People with self-signed certificates, CAcert.org Class 1 signed cer-
tificates, and no SSL at all want to leave this empty, which is also
the default value. Agreed to put into 5.0 only by lolando@ (trunk
will have different SSL mechanisms) so fusionforge.org can have the
Gandi intermediate certificate in its chain.

The FusionForge project does not endorse a̲n̲y̲ certification authority.

git-svn-id: svn+ssh://scm.fusionforge.org/srv/svn/fusionforge/branches/Branch_5_0@10220 9d84d37e-dcb1-4aad-b103-6f3d92f53bf6

--- a/gforge/etc/gforge.conf.example
+++ b/gforge/etc/gforge.conf.example
@@ -94,6 +94,7 @@ sys_jabber_pass=
 sys_plugins_path=/usr/share/gforge/plugins/
 sys_sslcrt=/etc/apache2/ssl/apache.pem
 sys_sslkey=/etc/apache2/ssl/apache.pem
+sys_ssl_apache_extra_cmd=SSLCertificateChainFile /etc/ssl/chain.pem
 noreply_to_bitbucket=true
 sys_simple_dns=true
 sys_apache_user=www-gforge
