--- a/src/debian/control
+++ b/src/debian/control
@@ -70,7 +70,8 @@ Description: Dummy upgrade package for FusionForge
 
 Package: gforge-common
 Architecture: all
-Depends: debconf (>= 1.0.32) | debconf-2.0, ucf, cpio, lockfile-progs, adduser, php5-cli, python, ${misc:Depends}
+Depends: debconf (>= 1.0.32) | debconf-2.0, ucf, cpio, lockfile-progs, adduser, php5-cli, python, w3c-dtd-xhtml, ${misc:Depends}
+Recommends: xmlstarlet
 Conflicts: sourceforge, gforge-plugin-scmcvs (<< 4.1), gforge-plugin-scmsvn (<< 4.1), gforge-plugin-scmccase (<< 4.1), gforge-theme-starterpack (<< 4.0)
 Description: collaborative development tool - shared files
  FusionForge provides many tools to aid collaboration in a
