• allow access to the MediaWiki API   e.g. for the Collection extension, which allows to download   a wikibook (or just a page) as e.g. PDF • read $core/data_path/plugins/mediawiki/ForgeSettings.php   if it exists just before the ProjectSettings.php • for that, redefine the config variables in gf-plugin-mediawiki
agreed (“Why not.”) lolando


git-svn-id: svn+ssh://scm.fusionforge.org/srv/svn/fusionforge/trunk@10305 9d84d37e-dcb1-4aad-b103-6f3d92f53bf6

--- a/src/etc/httpd.conf.example
+++ b/src/etc/httpd.conf.example
@@ -102,6 +102,7 @@ UseCanonicalName Off
         </Directory>
 
 	RedirectMatch 301 ^(/plugins/mediawiki/wiki/[-a-zA-Z0-9_]*)/*$ $1/index.php
+	AliasMatch ^/plugins/mediawiki/wiki/[-a-zA-Z0-9_]*/api.php /opt/gforge/www/plugins/mediawiki/api.php
 	AliasMatch ^/plugins/mediawiki/wiki/[-a-zA-Z0-9_]*/index.php /opt/gforge/www/plugins/mediawiki/index.php
 	AliasMatch ^/plugins/mediawiki/wiki/([-a-zA-Z0-9_]*)/images/(.*) /var/lib/gforge/plugins/mediawiki/projects/$1/images/$2
 
