--- a/src/plugins/mediawiki/etc/mediawiki.ini
+++ b/src/plugins/mediawiki/etc/mediawiki.ini
@@ -6,11 +6,15 @@ enable_uploads = false
 ; Source dir of the mediawiki source code.
 src_path = /usr/share/mediawiki
 
+; Mediawiki config dir.
+; This is where the forge-global stuff is stored.
+mwdata_path = "$core/data_path/plugins/mediawiki"
+
 ; Mediawiki projects dir. 
 ; All projects using the plugin have a subdirectory in this directory.
-projects_path = "$core/data_path/plugins/mediawiki/projects"
+projects_path = "$mediawiki/mwdata_path/projects"
 
 ; Mediawiki master dir.
 ; This is where all the links to the mediawiki source code are stored.
-master_path = "$core/data_path/plugins/mediawiki/master"
+master_path = "$mediawiki/mwdata_path/master"
 
