--- a/src/plugins/wiki/www/config/config-dist.ini
+++ b/src/plugins/wiki/www/config/config-dist.ini
@@ -37,7 +37,7 @@
 ; Reportedly broken on MacOSX Safari
 ;ENABLE_EDIT_TOOLBAR = false
 
-; Adds two additional buttons in EDIT_TOOLBAR, Search&Replace and Undo.
+; Adds two additional buttons in EDIT_TOOLBAR, Search&amp;Replace and Undo.
 ; Undo is experimental. Default: true
 ;JS_SEARCHREPLACE = true
 
@@ -96,6 +96,7 @@
 
 ; If more than this number of external links appear on non-authenticated 
 ; edits it will be rejected as spam.
+; Setting NUM_SPAM_LINKS to 0 will disable the check.
 ;NUM_SPAM_LINKS = 20
 
 ; By setting DISABLE_UPLOAD_ONLY_ALLOWED_EXTENSIONS to true, you get
@@ -126,6 +127,13 @@
 ; ENABLE_ACDROPDOWN replaces now ENABLE_LIVESEARCH
 ; http://momche.net/publish/article.php?page=acdropdown
 ;ENABLE_ACDROPDOWN = false
+
+; Aysnchronous ajax callbacks to dynamically display pages 
+; (as format=xml) on demand.
+; Experimental feature for plugin DynamicIncludePage, which might fail on 
+; some strictly non-conformant entities.
+; Note: TitleSearch ajax calls are enabled by ENABLE_ACDROPDOWN (xmlrpc, not xml)
+;ENABLE_AJAX = false
 
 ; Experimental WikiPedia feature: Force Discussion/Article link at the topnavbar.
 ;ENABLE_DISCUSSION_LINK = true
@@ -168,6 +176,12 @@
 ; be used by external tools to generate a seperate public wiki.
 ; Default: false
 ;ENABLE_PAGE_PUBLIC = true
+
+; Enable this for system maintainance (e.g. read-only mount) or a general
+; read-only database. 
+; Default: false
+;READONLY = true
+
 
 ;==========================================================================
 ; Part One: Authentication and security settings.
@@ -856,8 +870,11 @@ DBAUTH_AUTH_CRYPT_METHOD = plain
 ;
 ; The complete list of installed themes can be found by doing 'ls themes/'
 ; from the root of your PHPWiki installation.
+;
 ; white on yellow with fat blue links:
-THEME = default
+;THEME = default
+; a MonoBook extension, the new default
+THEME = Sidebar
 ; almost fully iconized classic grey MacOSX design:
 ;THEME = MacOSX
 ; as default, just some tricks to make the buttons smaller:
@@ -868,8 +885,6 @@ THEME = default
 ;THEME = Wordpress
 ; pure old-style c2wiki layout:
 ;THEME = Portland
-; example with some sidebar boxes:
-;THEME = Sidebar
 ; mozilla friendly, with lots of icons instead of buttons (i18n friendly):
 ;THEME = Crao
 ; default + rateit navbar:
@@ -887,21 +902,21 @@ THEME = default
 ; and to reference links to the stylesheets (css). For more info see:
 ; http://www.iana.org/assignments/character-sets. Note that PhpWiki
 ; has been extensively tested only with the latin1 (iso-8859-1)
-; character set.
+; and utf-8 character sets.
 ;
-; If you change the default from iso-8859-1 with existing pages, 
+; If you change the default with existing pages, 
 ; PhpWiki may not work properly and will require modifications in all existing pages. 
 ; You'll have to dump the old pages with the old charset
 ; and import it into the new one after having changed the charset.
-; Currently we support utf-8 for zh and ja, euc-jp for ja (not enabled)
-; and iso-8859-1 for all other langs. Changing languages (UserPreferences) 
+; Currently we support utf-8 for all languages, euc-jp for ja
+; and iso-8859-1 for all langs except ja and zh. Changing languages (UserPreferences) 
 ; from one charset to another will not work!
 ;
 ; Character sets similar to iso-8859-1 may work with little or no
 ; modification depending on your setup. The database must also
 ; support the same charset, and of course the same is true for the
 ; web browser. euc-jp and utf-8 works ok, but only is mbstring is used.
-CHARSET = iso-8859-1
+CHARSET = utf-8
 
 ; Most exotic charsets are not supported by htmlspecialchars, which prints a warning:
 ; "charset `bla' not supported, assuming iso-8859-1"
@@ -914,13 +929,13 @@ CHARSET = iso-8859-1
 ; Available languages:
 ; English  "en" (English    - HomePage)
 ; Dutch    "nl" (Nederlands - ThuisPagina)
-; Spanish  "es" (EspaÒol    - P·ginaPrincipal)
-; French   "fr" (FranÁais   - PageAccueil))
+; Spanish  "es" (Espa√±ol    - P√°ginaPrincipal)
+; French   "fr" (Fran√ßais   - PageAccueil))
 ; German   "de" (Deutsch    - StartSeite)
 ; Swedish  "sv" (Svenska    - Framsida)
 ; Italian  "it" (Italiano   - PaginaPrincipale)
-; Japanese "ja" (Japanese   - •€°º•‡•⁄°º•∏)
-; Chinese  "zh" (Chinese    - ?)
+; Japanese "ja" (Japanese   - „Éõ„Éº„É†„Éö„Éº„Ç∏)
+; Chinese  "zh" (Chinese    - È¶ñÈ†Å)
 ;
 ; If you set DEFAULT_LANGUAGE to the empty string, the users 
 ; preferred language as determined by the browser setting will be used.
@@ -998,7 +1013,7 @@ CHARSET = iso-8859-1
 
 ; Author and Copyright Site Navigation Links
 ;
-; These will be inserted as <link rel> tags in the html header of
+; These will be inserted as &lt;link rel&gt; tags in the html header of
 ; every page, for search engines and for browsers like Mozilla which
 ; take advantage of link rel site navigation.
 ;
@@ -1026,26 +1041,13 @@ CHARSET = iso-8859-1
 ; Default: true
 ;ENABLE_MARKUP_COLOR = false
 
-; Enable Mediawiki-style {{TemplatePage|vars=value|...}} syntax.
-; Default: undefined. Enabled automatically on the MonoBook theme if undefined.
-;ENABLE_MARKUP_TEMPLATE = true
-
-; Enable Mediawiki-style table syntax.
-; Default: undefined. Enabled automatically on the MonoBook theme if undefined.
-;ENABLE_MARKUP_MEDIAWIKI_TABLE = true
-
 ; Disable automatic linking of camelcase (wiki-)words to pages. 
-; Internal page links must be forced with [ pagename ] then.
+; Internal page links must be forced with [[pagename]] then.
 ; Default: false
 ;DISABLE_MARKUP_WIKIWORD = true
 
-; Enable <div> and <span> HTML blocks and attributes. Experimental. Not yet working.
+; Enable <div> and <span> HTML blocks and attributes. Experimental.
 ;ENABLE_MARKUP_DIVSPAN = true
-
-; Plugin shortcuts: Enable <xml> syntax mapped to a plugin invocation. (as in mediawiki)
-; <name arg=value>body</name> or <name /> => <?plugin pluginname arg=value body ?>
-; This breaks the InlineParser.
-;PLUGIN_MARKUP_MAP = "html:RawHtml dot:GraphViz toc:CreateToc amath:AsciiMath richtable:RichTable include:IncludePage tex:TexToPng"
 
 ;==========================================================================
 ; Part Six: URL options.
