--- a/src/plugins/wiki/www/config/config-default.ini
+++ b/src/plugins/wiki/www/config/config-default.ini
@@ -1,4 +1,4 @@
-; $Id: config-default.ini 6384 2009-01-08 13:32:57Z rurban $
+; $Id: config-default.ini 7515 2010-06-10 06:35:40Z rurban $
 ; This is the default PhpWiki configuration for undefined config.ini entries.
 
 ; recent development and debugging features:
@@ -10,6 +10,8 @@ JS_SEARCHREPLACE = true
 ENABLE_DOUBLECLICKEDIT = false
 ENABLE_XHTML_XML = false
 USECACHE = true
+READONLY = false
+
 ; calculated dynamically, but need a default
 WIKIDB_NOCACHE_MARKUP = false
 ENABLE_SPAMASSASSIN = false
@@ -25,7 +27,7 @@ ENABLE_ACDROPDOWN = true
 DISABLE_UPLOAD_ONLY_ALLOWED_EXTENSIONS = false
 ; deprecated, because non-free
 ENABLE_LIVESEARCH = false
-ENABLE_WYSIWYG = true
+ENABLE_WYSIWYG = false
 WYSIWYG_BACKEND = Wikiwyg
 WYSIWYG_DEFAULT_PAGETYPE_HTML = false
 UPLOAD_USERDIR = true
@@ -35,6 +37,7 @@ ENABLE_SEARCHHIGHLIGHT = true
 ENABLE_RECENTCHANGESBOX = false
 ENABLE_RATEIT = true
 ENABLE_PAGE_PUBLIC = false
+ENABLE_AJAX = true
 
 WIKI_NAME = PhpWiki
 ENABLE_REVERSE_DNS = true
@@ -91,7 +94,7 @@ ALLOW_USER_PASSWORDS = true
 USER_AUTH_ORDER = PersonalPage
 PASSWORD_LENGTH_MINIMUM = 0
 USER_AUTH_POLICY = stacked
-ENABLE_AUTH_OPENID = true
+ENABLE_AUTH_OPENID = false
 ;LDAP_AUTH_HOST = "ldap://localhost:389"
 ;LDAP_BASE_DN = "ou=Users,o=Development,dc=mycompany.com"
 ;LDAP_SET_OPTION = ""
@@ -123,16 +126,16 @@ ALLOW_HTTP_AUTH_LOGIN = false
 ALLOW_LDAP_LOGIN = false
 ALLOW_IMAP_LOGIN = false
 
-THEME = default
+THEME = Sidebar
 ; DEFAULT_LANGUAGE = 
-CHARSET = iso-8859-1
+CHARSET = utf-8
 WIKI_PGSRC = pgsrc
 DEFAULT_WIKI_PGSRC = pgsrc
 ; untranslated pgsrc pages to always include
 DEFAULT_WIKI_PAGES = "ReleaseNotes:SandBox:PhpWiki:SteveWainstead"
 
 ALLOWED_PROTOCOLS = "http|https|mailto|ftp|news|nntp|ssh|gopher"
-INLINE_IMAGES = "png|jpg|gif"
+INLINE_IMAGES = "png|jpg|jpeg|gif"
 WIKI_NAME_REGEXP = "(?<![[:alnum:]])(?:[[:upper:]][[:lower:][:digit:]]+){2,}(?![[:alnum:]])"
 SUBPAGE_SEPARATOR = "/"
 INTERWIKI_MAP_FILE = lib/interwiki.map
@@ -149,7 +152,7 @@ AUTHORPAGE_URL = "http://phpwiki.org/ThePhpWikiProgrammingTeam"
 
 TOC_FULL_SYNTAX = true
 ENABLE_MARKUP_COLOR = true
-ENABLE_MARKUP_TEMPLATE = false
+ENABLE_MARKUP_TEMPLATE = true
 DISABLE_MARKUP_WIKIWORD = false
 ENABLE_MARKUP_DIVSPAN = false
 PLUGIN_MARKUP_MAP = ""
