insure mkdir TARGET works
git-svn-id: svn+ssh://scm.fusionforge.org/srv/svn/fusionforge/trunk@10539 9d84d37e-dcb1-4aad-b103-6f3d92f53bf6

--- a/src/docs/docbook/Makefile
+++ b/src/docs/docbook/Makefile
@@ -89,7 +89,7 @@ prepare:
 	##
 	# Preparing build environment
 	#
-	@test -d ${TARGET} || mkdir ${TARGET};
+	@test -d ${TARGET} || mkdir -p ${TARGET};
 	@for book in ${BOOKS}; do \
 		test -d ${TARGET}$$book || mkdir ${TARGET}$$book; \
 	done;
