Replace tetex-extra latex-ucs with texlive-latex-recommended in dependancies
git-svn-id: svn+ssh://scm.fusionforge.org/srv/svn/fusionforge/trunk@10584 9d84d37e-dcb1-4aad-b103-6f3d92f53bf6

--- a/src/docs/docbook/Makefile
+++ b/src/docs/docbook/Makefile
@@ -152,7 +152,7 @@ debianhtml:
 
 debianpdf:
 	@echo "=====> Intalling necessary packages"
-	@sudo apt-get install db2latex-xsl tetex-extra latex-ucs
+	@sudo apt-get install db2latex-xsl texlive-latex-recommended # Was tetex-extra latex-ucs
 	@echo "Making db2latex dir"
 	@[ ! -d xsl/db2latex ] && mkdir xsl/db2latex || echo "db2latex dir already done"
 	@echo "=====> Link to docbook"
